@@ -1,3 +1,3 @@
-# mean, investigation_time=1.0, imt="PGA", checksum=1037198252
+# mean, investigation_time=1.0, imt="PGA", checksum=2936365882
 lon,lat,depth,poe-0.1,poe-0.4,poe-0.6
 0.00000,0.00000,0.00000,4.563774E-01,6.293254E-02,2.995505E-03
