@@ -3,7 +3,7 @@ random_seed = 23
 master_seed = 42
 description = Event Based Risk QA Test 2
 calculation_mode = event_based_risk
-split_sources = false
+fast_sampling = true
 
 structural_vulnerability_file = vulnerability_model_stco.xml
 
