@@ -1,4 +1,4 @@
-# mean, investigation_time=10.0, imt="PGA", checksum=82010008
+# mean, investigation_time=10.0, imt="PGA", checksum=2916048678
 lon,lat,depth,poe-0.0,poe-0.02,poe-0.041,poe-0.061,poe-0.082,poe-0.102,poe-0.122,poe-0.143,poe-0.163,poe-0.184,poe-0.204,poe-0.224,poe-0.245,poe-0.265,poe-0.286,poe-0.306,poe-0.327,poe-0.347,poe-0.367,poe-0.388,poe-0.408,poe-0.429,poe-0.449,poe-0.469,poe-0.49,poe-0.51,poe-0.531,poe-0.551,poe-0.571,poe-0.592,poe-0.612,poe-0.633,poe-0.653,poe-0.673,poe-0.694,poe-0.714,poe-0.735,poe-0.755,poe-0.776,poe-0.796,poe-0.816,poe-0.837,poe-0.857,poe-0.878,poe-0.898,poe-0.918,poe-0.939,poe-0.959,poe-0.98,poe-1.0
 27.26105,38.48514,0.00000,7.142857E-01,4.515147E-01,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00
 27.31028,37.80813,0.00000,8.948591E-01,9.030294E-02,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00
