@@ -1,4 +1,4 @@
-# mean, investigation_time=10.0, checksum=82010008
+# mean, investigation_time=10.0, checksum=2916048678
 lon,lat,PGA-0.1,PGA-0.2,SA(0.5)-0.1,SA(0.5)-0.2
 27.26105,38.48514,2.031947E-02,2.017194E-02,0.000000E+00,0.000000E+00
 27.31028,37.80813,0.000000E+00,0.000000E+00,0.000000E+00,0.000000E+00
