@@ -1,7 +1,7 @@
 [general]
 description = Event Based Risk for Turkey reduced
 calculation_mode = event_based_risk
-split_sources = false
+fast_sampling = true
 concurrent_tasks = 64
 random_seed = 323
 ses_seed = 323
